have made it responsive

--- a/grail/index.html
+++ b/grail/index.html
@@ -12,13 +12,15 @@
 <body>
 
     <div id="main-div">
-        <header id="top-section"></header>
+        <header id="top-section">
+            Top Header
+        </header>
         <div id="mid-section">
-            <div id="middle-divs"></div>
-            <div id="middle-divs"></div>
-            <div id="middle-divs"></div>
+            <div id="middle-divs">Middle 01</div>
+            <div id="middle-divs">Middle 02</div>
+            <div id="middle-divs">Middle 03</div>
         </div>
-        <footer id="bottom-section"></footer>
+        <footer id="bottom-section">Footer</footer>
     </div>
 
 </body>
