--- a/contact-form/index.html
+++ b/contact-form/index.html
@@ -16,26 +16,26 @@
         <div id="fNameContainer" class="formElem">
             <label>First Name</label>
             <input type="text" id="first-name" />
-            <span id="fNameError"></span>
+            <span id="fNameError" class="error"></span>
         </div>
 
         <div id="lNameContainer" class="formElem">
             <label>Last Name</label>
             <input type="text" id="last-name" />
-            <span id="lNameError"></span>
+            <span id="lNameError" class="error"></span>
         </div>
 
         
         <div id="emailContainer" class="formElem">
             <label>Email</label>
             <input type="text" id="email" />
-            <span id="emailError"></span>
+            <span id="emailError" class="error"></span>
         </div>
 
         <div id="feedbackContainer" class="formElem">
             <label>Feedback</label>
             <textarea type="text" id="feedback"> </textarea>
-            <span id="feedbackError"></span>
+            <span id="feedbackError" class="error"></span>
         </div>
 
         <button id="submit-btn">Submit</button>
