have added edge cases

--- a/generate-table/index.html
+++ b/generate-table/index.html
@@ -14,13 +14,13 @@
     <form id="main-div">
         <div id="rowContainer" class="formElem">
             <label>Rows</label>
-            <input type="number" id="rows" />
+            <input type="number" id="rows" min="1" />
             <span id="rowError" class="error"></span>
         </div>
 
         <div id="columnContainer" class="formElem">
             <label>Columns</label>
-            <input type="number" id="columns" />
+            <input type="number" id="columns" min="1" />
             <span id="colError" class="error"></span>
         </div>
         <button id="submit-btn">Submit</button>
