have complete the code

--- a/digital-clock/index.html
+++ b/digital-clock/index.html
@@ -15,15 +15,18 @@
         <h1>Digital Clock</h1>
 
         <div class="clock-holder">
-            <div id="hours"></div>
-            <div id="mins"></div>
-            <div id="seconds"></div>
+            <div class="section">
+                <div id="hours" class="data"></div>
+                <div id="mins" class="data"></div>
+                <div id="seconds" class="data"></div>
+            </div>
 
-            <div id="date"></div>
-            <div id="month"></div>
-            <div id="year"></div>
-
-            <div id="day"></div>
+            <div class="section">
+                <div id="day" class="data"></div>
+                <div id="date" class="data"></div>
+                <div id="month" class="data"></div>
+                <div id="year" class="data"></div>
+            </div>
         </div>
     </div>
 
