added the password field here

--- a/signup-form/index.html
+++ b/signup-form/index.html
@@ -31,11 +31,17 @@
             <input type="text" id="email" />
             <span id="emailError" class="error"></span>
         </div>
+
+        <div id="passwordContainer" class="formElem">
+            <label>Password</label>
+            <input type="password" id="password" />
+            <span id="passwordError" class="error"></span>
+        </div>
+
+
         <button id="submit-btn">Submit</button>
 
     </form>
-
-
 
 </body>
 <script src="script.js">
