have completed the form validation here

--- a/signup-form/index.html
+++ b/signup-form/index.html
@@ -25,7 +25,7 @@
             <span id="lNameError" class="error"></span>
         </div>
 
-        
+
         <div id="emailContainer" class="formElem">
             <label>Email</label>
             <input type="text" id="email" />
@@ -38,6 +38,11 @@
             <span id="passwordError" class="error"></span>
         </div>
 
+        <div id="confirmPasswordContainer" class="formElem">
+            <label>Confirm Password</label>
+            <input type="password" id="confirmPassword" />
+            <span id="confirmPasswordError" class="error"></span>
+        </div>
 
         <button id="submit-btn">Submit</button>
 
