have completed logic here

--- a/instalment-calculator/index.html
+++ b/instalment-calculator/index.html
@@ -15,7 +15,7 @@
 
         
         <div id="principalContainer" class="formElem">
-            <label>Principal</label>
+            <label>Principal (Rs)</label>
             <input type="text" id="principal-container" />
             <span id="principalError" class="error"></span>
         </div>
@@ -35,6 +35,7 @@
 
         <button id="submit-button">Submit</button>
 
+        <div id="instalment-calculated"></div>
     </form>
 
 </body>
