have added basic code here

--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -11,8 +11,17 @@
 
 <body>
 
-    <div id="main-div">
-    </div>
+    <form id="main-div">
+        Stopwatch 
+
+        <div id="inputSecContainer" class="formElem">
+            <label>Input Sec</label>
+            <input type="text" id="input-sec" />
+            <span id="inputSecError" class="error"></span>
+        </div>
+
+        <button id="submit-btn">Submit</button>
+    </form>
 
 </body>
 <script src="script.js">
