have displayed the calculated value

--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -21,6 +21,12 @@
         </div>
 
         <button id="submit-btn">Submit</button>
+
+        <div id="timer">
+            <div id="timer-hour" class="data"></div>
+            <div id="timer-min" class="data"></div>
+            <div id="timer-sec" class="data"></div>
+        </div>
     </form>
 
 </body>
