--- a/Countdwn/index.html
+++ b/Countdwn/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <form id="main-div">
-        Stopwatch 
+        Countdwn 
 
         <div id="inputSecContainer" class="formElem">
             <label>Input Sec</label>
