--- a/custom-dropdown/index.html
+++ b/custom-dropdown/index.html
@@ -13,7 +13,8 @@
 
     <div id="main-div">
         <div id="dropdown">
-           
+           <input type="text" id="search" />
+           <div id="search-items"></div>
         </div>
     </div>
 
