have selected option display to app

--- a/custom-dropdown/index.html
+++ b/custom-dropdown/index.html
@@ -16,6 +16,7 @@
            <input type="text" id="search" />
            <div id="search-items"></div>
         </div>
+        <div id="selected-option"></div>
     </div>
 
 </body>
