--- a/custom-dropdown/index.html
+++ b/custom-dropdown/index.html
@@ -13,7 +13,9 @@
 
     <div id="main-div">
         <div id="dropdown">
-           <input type="text" id="search" />
+            <div id="search-container">
+                <input type="text" id="search" />
+            </div>
            <div id="search-items"></div>
         </div>
         <div id="selected-option"></div>
